--- a/src/App.css
+++ b/src/App.css
@@ -36,7 +36,41 @@
   padding: 10px;
 }
 
+.loginForm__heading {
+  font-size: 15px;
+  margin: 4px 0;
+}
 
-.loginForm label {
-  margin-right: 10px;
+.loginForm input {
+   width: 180px;
+   font-size: 14px;
+   padding: 14px;
+
+   margin-right: 8px;
+   margin-bottom: 4px;
+ }
+
+.loginForm_btn {
+  width: 180px;
+  font-size: 15px;
+  padding: 14px;
+  cursor: pointer;
+  color: #fff;
+  background-color: #00b956;
+
+  margin-right: 8px;
+  margin-bottom: 4px;
+  border-radius: 24px;
+}
+
+.loginForm_btn:hover,
+.loginForm_btn:focus,
+.loginForm_btn:active {
+  background-color: #00ee6f;
+}
+
+.loginForm_btn.disabled {
+  background-color: #d8d8d8;
+  border: 1px solid #d8d8d8;
+  outline: none;
 }
