--- a/src/App.css
+++ b/src/App.css
@@ -38,7 +38,8 @@
 
 .loginForm__heading {
   font-size: 15px;
-  margin: 4px 0;
+  margin: 4px 0 8px;
+  text-align: left;
 }
 
 .loginForm input {
@@ -55,6 +56,9 @@
   font-size: 15px;
   padding: 14px;
   cursor: pointer;
+  border: none;
+  outline: none;
+
   color: #fff;
   background-color: #00b956;
 
@@ -71,6 +75,4 @@
 
 .loginForm_btn.disabled {
   background-color: #d8d8d8;
-  border: 1px solid #d8d8d8;
-  outline: none;
 }
