--- a/src/App.css
+++ b/src/App.css
@@ -78,6 +78,12 @@
 }
 
 /* --- */
+
+.chat {
+  max-width: 600px;
+  margin: 0 auto;
+  box-shadow: 0 0 10px rgba(0,0,0,0.2);
+}
 .chat__messages {
   padding: 20px;
   background-color: #d8d8d8;
@@ -105,14 +111,18 @@
 }
 
 .chat__currentMessage textarea {
-  padding: 10px;
   width: 100%;
+  max-width: 560px;
+  padding: 10px;
 }
 
 .chat__header {
+  width: 580px;
+  margin: 0 auto;
   padding: 10px;
   display: flex;
   align-items: center;
+  box-shadow: 0 0 10px rgba(0,0,0,0.2);
 }
 
 .chat__header__text {
@@ -125,5 +135,6 @@
   border: none;
   outline: none;
   cursor: pointer;
-  background-color: #d8d8d8;
+  color: #00b956;
+  font-weight: bold;
 }
