--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,8 @@
   width: 100%;
   padding-top: 100px;
   margin: 0 auto;
+  display: flex;
+  justify-content: center;
 }
 
 @media (min-width: 1201px) {
@@ -35,7 +37,7 @@
 
 .chat {
   max-width: 600px;
-  margin: 0 auto;
+  margin: 0;
   box-shadow: 0 0 10px rgba(0,0,0,0.2);
 }
 
@@ -131,24 +133,21 @@
   padding: 14px;
 
   margin-right: 8px;
-  margin-bottom: 4px;
 }
 
 @media (max-width: 600px) {
   .loginForm input {
     width: 100%;
-    margin: 0 auto 4px;
+    margin: 0;
+    margin-bottom: 10px;
   }
 }
 
 .loginForm_btn {
-  /*width: 180px;*/
   font-size: 15px;
   padding: 0 30px;
   height: 48px;
   border-radius: 30px;
-  margin-right: 8px;
-  margin-bottom: 4px;
 
   cursor: pointer;
   border: none;
