--- a/src/App.css
+++ b/src/App.css
@@ -39,6 +39,8 @@
   max-width: 600px;
   margin: 0;
   box-shadow: 0 0 10px rgba(0,0,0,0.2);
+  display: flex;
+  flex-direction: column;
 }
 
 /* ---- */
@@ -99,7 +101,6 @@
 
 .chat__footer {
   padding: 0;
-
 }
 
 .chat__currentMessage {
@@ -118,28 +119,40 @@
   padding: 10px;
   display: flex;
   flex-wrap: wrap;
+  justify-content: flex-start;
   align-items: center;
 }
 
+
 .loginForm__heading {
   font-size: 15px;
-  margin: 4px 0 8px;
+  margin-top: 4px;
+  margin-bottom: 8px;
   text-align: left;
 }
 
+.loginForm__form-group {
+  margin-bottom: 10px;
+  margin-right: 10px;
+}
+
 .loginForm input {
-  width: 180px;
+  flex-basis: 180px;
+  flex-grow: 1;
   font-size: 14px;
   padding: 14px;
-
-  margin-right: 8px;
+  border: 1px solid #d8d8d8;
 }
 
 @media (max-width: 600px) {
+
+  .loginForm {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+
   .loginForm input {
     width: 100%;
-    margin: 0;
-    margin-bottom: 10px;
   }
 }
 
